Fix for search button on IE

--- a/fbstyles.css
+++ b/fbstyles.css
@@ -861,7 +861,7 @@ a.tab.active {
     font-weight: 400;
     font-size: 16px;
     text-align: center;
-    padding: 0px 20px 0 0;
+    padding: 0;
     height: 60px;
     width: 10%;
     float: right;
@@ -882,10 +882,9 @@ a.tab.active {
     font-style: normal;
     font-weight: 400;
     text-decoration: inherit;
-    padding-right: .7em;
-    position: absolute;
-    top: 14px;
-    right: auto;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1.5em;
 }
 
